--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Traversy Media Typescript with Express Node jump start app",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
-    "build": "tsc -p ."
+    "start": "node dist/server",
+    "build": "tsc -p .",
+    "watch": "ts-node-dev --respawn --transpile-only ./src/server.ts"
   },
   "keywords": [
     "typescript",
@@ -16,12 +16,12 @@
   "author": "Zaki Mohammed",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ts-node-dev": "^1.0.0-pre.60"
   },
   "devDependencies": {
     "@types/express": "^4.17.4",
     "@types/node": "^13.9.8",
-    "nodemon": "^2.0.2",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   }
