--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "author": "Zaki Mohammed",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "ts-node-dev": "^1.0.0-pre.60"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.4",
     "@types/node": "^13.9.8",
     "ts-node": "^8.8.1",
+    "ts-node-dev": "^1.0.0-pre.60",
     "typescript": "^3.8.3"
   }
 }
